--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 *.png
 Malaria using Cell Images/cell_images/Parasitized/Thumbs.db
 Malaria using Cell Images/cell_images/Uninfected/Thumbs.db
+
+*.avi
